--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "firebase": "^8.2.6",
+    "geolib": "^3.3.1",
+    "leaflet": "^1.7.1",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
